@@ -1,3 +1,8 @@
+2007-07-27  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-themes.c: (themes_init, theme_postinit): remove workarounds
+	for initialization problems in early versions of the capplet
+
 2007-07-27  Denis Washington  <dwashington@gmx.net>
 
 	* appearanc-themes.c: (appearance_window_drag_data_received_cb),
